[gd_scene load_steps=10 format=3 uid="uid://c3tr7ovy3vgcw"]

[ext_resource type="Script" path="res://Scenes/Characters/Enemy/Enemy/bat.gd" id="1_njhdb"]
[ext_resource type="Texture2D" uid="uid://b2h551fkxu38j" path="res://Scenes/Characters/Enemy/Enemy/Textures/bat.png" id="3_magvo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ppe5l"]
size = Vector2(8, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_8pv2w"]
atlas = ExtResource("3_magvo")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gvpw"]
atlas = ExtResource("3_magvo")
region = Rect2(8, 0, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_58nbo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8pv2w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gvpw")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vk3dr"]
size = Vector2(0.15, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ka35n"]
size = Vector2(0.15, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4pv1n"]
size = Vector2(9, 8)

[node name="Bat" type="CharacterBody2D" groups=["Enemy", "Solid"]]
motion_mode = 1
script = ExtResource("1_njhdb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_ppe5l")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_58nbo")
animation = &"idle"
frame_progress = 0.4394

[node name="RWallDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RWallDetector"]
position = Vector2(4.075, -0.5)
shape = SubResource("RectangleShape2D_vk3dr")

[node name="LWallDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LWallDetector"]
position = Vector2(-4.075, -0.5)
shape = SubResource("RectangleShape2D_ka35n")

[node name="Detector" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_4pv1n")

[connection signal="body_entered" from="RWallDetector" to="." method="_on_r_wall_detector_body_entered"]
[connection signal="body_entered" from="LWallDetector" to="." method="_on_l_wall_detector_body_entered"]
[connection signal="area_entered" from="Detector" to="." method="_on_detector_area_entered"]
[connection signal="body_entered" from="Detector" to="." method="_on_detector_body_entered"]
